# msu-256

./: Cargo.toml  README.md
.github/workflows/: docs.yml
src/: error.rs  lib.rs  params.rs
src/bigint/: mod.rs  u256.rs  u512.rs
src/domain/: coeff.rs  config.rs  mod.rs  poly.rs  triangle.rs
src/hdl/: demo.rs  driver.rs  mod.rs
src/simulate/: golden.rs  mod.rs  msu_step.rs  testbench.rs
src/table/: mod.rs  mod_inverse.rs  montgomery.rs  upper.rs
