[package]
name = "msu-256"
version = "0.1.0"
edition = "2024"
description = "256-bit Ozturk Modular Squaring Unit on hdl-cat and comp-cat-rs"
license = "MIT OR Apache-2.0"

[dependencies]
comp-cat-rs = "0.5"
hdl-cat = { version = "0.1", path = "../hdl-cat/crates/hdl-cat" }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = "warn"
needless_pass_by_value = "warn"
manual_map = "warn"
